# fastapi-keycloak-jwt

./: .env  README.md  pyproject.toml
.github/scripts/: config-keycloak.sh  get-user-token.sh
.github/workflows/: job-restapi-keycloak.yml
kcdb/data/h2/: keycloakdb.mv.db  keycloakdb.trace.db
kcdb/data/import/: ADA502-realm.json  ADA502-users-0.json
src/: main.py
src/api/: restapi.py
src/kc/: auth.py  models.py
tests/: test_restapi.py  update_env.py
